<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">_RepresentMe</string>
    <string name="title_rep_detail">Representative Details</string>
    <string name="action_settings">Settings</string>
    <string name="my_reps">Representatives</string>
    <string name="updated">Updated</string>
    <string name="ago">ago</string>
    <string name="rep_name">Representative Name</string>
    <string name="rep_party">Party</string>
    <string name="rep_state">State</string>
    <string name="rep_district">Some District</string>
    <string name="rep_phone">+1 800 555 5555</string>
    <string name="rep_office">Some Address, Anytown, DC</string>
    <string name="rep_link">http://fancy.example.com</string>
    <string name="rep_name_label">Name</string>
    <string name="rep_party_label">Party</string>
    <string name="rep_state_label">State</string>
    <string name="rep_district_label">District 14</string>
    <string name="rep_phone_label">Phone</string>
    <string name="rep_office_label">Office</string>
    <string name="rep_website_label">Website</string>
    <string name="loading">loading...</string>
    <string name="edit_text_title">Edit</string>
    <string name="empty"></string>
    <string name="zip_code">enter zip code</string>
    <string name="no_results">no results</string>
    <string name="no_network">no internet connection</string>
    <string name="no_dialer">Couldn\'t start dialer.</string>
    <string name="no_map">Couldn\'t start map.</string>
    <string name="no_browser">Couldn\'t start browser.</string>
    <string name="first_time">Find your representatives! Just enter your home zip code to get started.</string>

</resources>