<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rep_detail_fragment"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RepDetailFragment" >

    <TextView
        android:id="@+id/rep_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/rep_name_label" />

    <TextView
        android:id="@+id/rep_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/rep_name_label"
        android:text="@string/rep_name"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/rep_party_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rep_name_label"
        android:text="@string/rep_party_label" />

    <TextView
        android:id="@+id/rep_party"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rep_name"
        android:layout_toRightOf="@id/rep_party_label"
        android:text="@string/rep_party"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/rep_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rep_party_label"
        android:text="@string/rep_state" />

    <TextView
        android:id="@+id/rep_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rep_party"
        android:layout_toRightOf="@id/rep_state_label"
        android:text="@string/rep_state"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/rep_zip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rep_state_label"
        android:text="@string/rep_state" />

    <TextView
        android:id="@+id/rep_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rep_state"
        android:layout_toRightOf="@id/rep_zip_label"
        android:text="@string/rep_state"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/rep_district_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/rep_zip_label"
        android:text="@string/rep_district_label" />

    <TextView
        android:id="@+id/rep_district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rep_zip"
        android:layout_toRightOf="@id/rep_district_label"
        android:text="@string/rep_district"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/rep_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rep_district_label"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/rep_phone" />

    <Button
        android:id="@+id/rep_office"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rep_phone"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/rep_office" />

    <Button
        android:id="@+id/rep_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rep_office"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/rep_link" />

</RelativeLayout>